Create Get24HourGainersPairs endpoint for binance
