# handler/binance.go
@@ -13,6 +13,7 @@ type Binance interface {
 	Get24HourTickerData(c *gin.Context)
 	GetTickerForPair(c *gin.Context)
 	Get24HourGainersTickerData(c *gin.Context)
+	Get24HourGainersPairs(c *gin.Context)
 }
 
 type BinanceImpl struct {
@@ -70,10 +71,35 @@ func (h *BinanceImpl) GetTickerForPair(c *gin.Context) {
 //	@Success		200				{array}	TickerData
 //	@Router			/binance/ticker/24hr/gainers [get]
 func (h *BinanceImpl) Get24HourGainersTickerData(c *gin.Context) {
-	limit, _ := strconv.Atoi(c.DefaultQuery("limit", "100"))
+	limit, _ := strconv.Atoi(c.DefaultQuery("limit", "500"))
 	endingFilter := c.DefaultQuery("endingFilter", "")
 
-	ticker, err := h.parser.Binance().Get24HourGainersTickerData(&limit, &endingFilter)
+	ticker, err := h.parser.Binance().Get24HourGainersTickerData(limit, endingFilter)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, ticker)
+}
+
+// Get24HourGainersPairs
+//
+//	@Summary		Get the top gainers with a specified limit, filtered by ending and exclusion.
+//	@Description	Retrieve the top gainers with a specified limit, filtered by ending and exclusion.
+//	@Produce		json
+//	@Tags			Binance
+//	@Param			limit			query	int		false	"Limit the number of results"
+//	@Param			endingFilter	query	string	false	"Filter results by ending"
+//	@Param			exclude			query	string	false	"Exclude results with specific ending"
+//	@Success		200				{array}	TickerData
+//	@Router			/binance/ticker/24hr/gainers/pairs [get]
+func (h *BinanceImpl) Get24HourGainersPairs(c *gin.Context) {
+	limit, _ := strconv.Atoi(c.DefaultQuery("limit", "100"))
+	endingFilter := c.DefaultQuery("endingFilter", "USDT")
+	excludeFilter := c.DefaultQuery("exclude", "BNB")
+
+	ticker, err := h.parser.Binance().GetTickersGainerForPairs(limit, endingFilter, excludeFilter)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
